; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bxe/extr_ecore_sp.c_ecore_put_cam_offset_mac.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bxe/extr_ecore_sp.c_ecore_put_cam_offset_mac.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ecore_vlan_mac_obj = type { %struct.ecore_credit_pool_obj* }
%struct.ecore_credit_pool_obj = type { i32 (%struct.ecore_credit_pool_obj*, i32)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ecore_vlan_mac_obj*, i32)* @ecore_put_cam_offset_mac to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ecore_put_cam_offset_mac(%struct.ecore_vlan_mac_obj* %0, i32 %1) #0 {
  %3 = alloca %struct.ecore_vlan_mac_obj*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.ecore_credit_pool_obj*, align 8
  store %struct.ecore_vlan_mac_obj* %0, %struct.ecore_vlan_mac_obj** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.ecore_vlan_mac_obj*, %struct.ecore_vlan_mac_obj** %3, align 8
  %7 = getelementptr inbounds %struct.ecore_vlan_mac_obj, %struct.ecore_vlan_mac_obj* %6, i32 0, i32 0
  %8 = load %struct.ecore_credit_pool_obj*, %struct.ecore_credit_pool_obj** %7, align 8
  store %struct.ecore_credit_pool_obj* %8, %struct.ecore_credit_pool_obj** %5, align 8
  %9 = load %struct.ecore_credit_pool_obj*, %struct.ecore_credit_pool_obj** %5, align 8
  %10 = getelementptr inbounds %struct.ecore_credit_pool_obj, %struct.ecore_credit_pool_obj* %9, i32 0, i32 0
  %11 = load i32 (%struct.ecore_credit_pool_obj*, i32)*, i32 (%struct.ecore_credit_pool_obj*, i32)** %10, align 8
  %12 = load %struct.ecore_credit_pool_obj*, %struct.ecore_credit_pool_obj** %5, align 8
  %13 = load i32, i32* %4, align 4
  %14 = call i32 %11(%struct.ecore_credit_pool_obj* %12, i32 %13)
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
